Fix url mapping on template

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 		<input type="submit" name="submit">
 	</form>
 
-	<a href="clear">clear</a>
+	<a href="/clear/">clear</a>
 
 	<div>
 		{% for userinput in data %}
