Fix bug - map not displaying as a result of CSS error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ input[type="submit"]:hover {
 	background: steelblue;
 }
 
-#map-canvass {
+#map-canvas {
 	width: 70%;
 	height: 500px;
 	float: left;
