--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,22 @@
 			google.maps.event.addListener(map, 'click', function(event){
 				placeMarker(event.latLng)
 			});
+
+			placeCrimes( {{ crimes | safe }} );
+		}
+
+
+		/**
+		 * 
+		**/
+		function placeCrimes(crimes) {
+			for (var i = 0; i < crimes.length; i++){
+				crime = new google.maps.Marker ( {
+					position: new google.maps.LatLng(crimes[i].latitude, crimes[i].longitude),
+					map: map,
+					title: crimes[i].date + "\n" + crimes[i].category + "\n" + crimes[i].description
+				});
+			}
 		}
 
 
