--- a/templates/home.html
+++ b/templates/home.html
@@ -81,8 +81,9 @@
 		<form action="submitcrime" method="POST">
 			<label for="category">Category</label>
 			<select name="category" id="category">
-				<option value="mugging">Mugging</option>
-				<option value="breakin">Breakin</option>
+				{% for category in categories %}
+				<option value="{{category}}">{{ category }}</option>
+				{% endfor %}
 			</select>
 
 			<label for="date">Date</label>
