Add validation to longitude & latitude form field

--- a/templates/home.html
+++ b/templates/home.html
@@ -90,10 +90,10 @@
 			<input type="date" name="date" id="date">
 
 			<label for="latitude">Latitude</label>
-			<input type="text" name="latitude" id="latitude">
+			<input type="text" name="latitude" id="latitude" readonly />
 
 			<label for="longitude">Longitude</label>
-			<input type="text" name="longitude" id="longitude">
+			<input type="text" name="longitude" id="longitude" readonly />
 
 			<label for="description">Description</label>
 			<textarea name="description" id="description" placeholder="A brief but detailed description of the crime"></textarea>
